infrastructure/terraform/vpc.tf
resource "aws_vpc" "task_platform_vpc" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_support    = true
  enable_dns_hostnames  = true

  tags = {
    Name = "task-platform-vpc"
  }
}
